--- a/back/ArticlesService.API/appsettings.json
+++ b/back/ArticlesService.API/appsettings.json
@@ -6,6 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Auth": {
+    "Issuer": "apiServer",
+    "Audience": "apiServer",
+    "Secret": "qwerty1234567890+-",
+    "TokenLifetime": "86400"
+  },
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
