--- a/back/ArticleService.Common/ArticlesService.Common.csproj
+++ b/back/ArticleService.Common/ArticlesService.Common.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ArticlesService.Domain\ArticlesService.Domain.csproj" />
   </ItemGroup>
 
 </Project>
