--- a/back/ArticlesService.Infrastructure/ArticlesService.Infrastructure.csproj
+++ b/back/ArticlesService.Infrastructure/ArticlesService.Infrastructure.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\ArticlesService.Domain\ArticlesService.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Images\" />
+  </ItemGroup>
+
 </Project>
