--- a/back/ArticlesService.API/appsettings.json
+++ b/back/ArticlesService.API/appsettings.json
@@ -1,5 +1,28 @@
 {
   "Logging": {
+    "PathFormat": "Logs/log-{Date}.txt",
+    "IncludeScopes": false,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Information",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information",
+        "System": "Warning",
+        "Microsoft": "Warning"
+      }
+    },
+    "File": {
+      "LogLevel": {
+        "Default": "Information",
+        "System": "Warning",
+        "Microsoft": "Warning"
+      }
+    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
